# roverswarm

./: .bashrc  .gitignore  docker-compose.yml  notes.md  params.yaml  params_dense.yaml  params_sparse.yaml  readme.md  run_simulations_dense.sh  run_simulations_sparse.sh  sim.launch  sim2.launch  sim3.launch  sim4.launch  sim5.launch  sim6.launch
plots/: plot.ipynb
results/: 1.csv  1685484173.3573923-sim5.csv  1685484444.4610293-sim4.csv  1685484600.2100904-sim3.csv  1685484800.2659194-sim2.csv  1685485045.1710014-sim1.csv  1685820856.5491729.6.csv  1685820970.9569147.5.csv  1685821081.0023215.4.csv  1685821238.965125.3.csv  1685821428.2499154.2.csv  1685821671.6736813.1.csv  1685822819.194491.1.csv  1685824340.9903007.1.csv  1685827384.297062.2.csv  1685827644.0616577.2.csv  1685827924.0183024.3.csv  1685835112.9350226.3.csv  1685835353.8433762.4.csv  1685835489.0557845.4.csv  1685835623.6519113.5.csv  1685835730.7145848.5.csv  1685835836.2856498.6.csv  1685835938.4767563.6.csv  1701536085.287664.6.csv  1701536174.9929068.6.csv  1701536195.7045465.6.csv  1701536304.6943076.5.csv  1701536411.6894305.5.csv  1701536514.2821858.5.csv  1701536631.297769.4.csv  1701536777.3354588.4.csv  1701536921.476567.4.csv  1701537056.091944.3.csv  1701537232.6772754.3.csv  1701537395.8378344.3.csv  1701537554.993226.2.csv  1701537788.6333869.2.csv  1701538009.223183.2.csv  1701538239.859793.1.csv  (+7 more)
results/dense/: 1.csv  2.csv  3.csv  4.csv  5.csv  6.csv
results/dense/area/: 1687110313.4437766.6.csv  1687110419.5672855.5.csv  1687110522.7915864.4.csv  1687110657.3421829.3.csv  1687110841.017301.2.csv  1687111049.542516.1.csv
results/sparse/: 1.csv  2.csv  3.csv  4.csv  5.csv  6.csv
src/rovers/: CMakeLists.txt  package.xml
src/roversim/: CMakeLists.txt  package.xml
src/roversim/include/roversim/: rover.h  rover_frame.h
src/roversim/launch/: multisim.launch
src/roversim/src/: rover.cpp  rover_frame.cpp  roversim.cpp
src/roversim/tutorials/: draw_square.cpp  mimic.cpp  teleop_rover_key.cpp
src/rovertelemetry/: CMakeLists.txt  package.xml
(+10 files in other folders)
